--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Carter Abdallah</h1>
+      <h1>Chaouki Abdallah</h1>
       <p>I'm a <span class="typed" data-typed-items="Software Developer, Student, Physical Trainer"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/carter-abdallah-958666140/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
