--- a/ECE3600.html
+++ b/ECE3600.html
@@ -62,7 +62,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Class Information</h3>
+              <h3>Class </h3>
               <ul>
                 <li><strong>Course Name</strong>: ECE 3600 - Computer Communicatoons</li>
                 <li><strong>Taken</strong>: Fall 2021</li>
