--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects and Courses</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills and Interests</span></a></li>
-        <li><a href="mailto:carterabdallah@gmail.com" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="mailto:chaoukita@gmail.com" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
