--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/chaouki-abdallah-a268796/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/Carterabdallah" class="github"><i class="bx bxl-github"></i></a>
-        <a href="mailto:carterabdallah@gmail.com" ><i class="bx bx-envelope"></i></a>
+        <a href="mailto:chaooukita@gmail.com" ><i class="bx bx-envelope"></i></a>
 
       </div>
     </div>
