--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Chaouki Abdallah</h1>
-      <p>I'm a <span class="typed" data-typed-items="Software Developer, Student, Physical Trainer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Professor, Student, EVPR"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/chaouki-abdallah-a268796/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/Carterabdallah" class="github"><i class="bx bxl-github"></i></a>
