--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi! I'm Chaouki Abdallah, a professor of Eletrical & Computer Engineering and the Executuve Vice President for Research at Georgia Tech. software engineer with a passion for ML and Cloud Computing. I have held numerous internships throughout the years at fortune 500 financial technology companies, but am currently pursuing a masters in Machine Learning at the Georgia Institute of Technology in Atlanta, GA.
+          <p>Hi! I'm Chaouki Abdallah, a professor of Eletrical & Computer Engineering and the Executuve Vice President for Research at Georgia Tech. 
             In addition to coding, I am a gym rat, involved with greek life at Georgia Tech, and a twin! Please take a look below at some of the courses I've taken and the projects I've built.
           </p>
         </div>
